# culture

./: .flake8  .markdownlint-cli2.yaml  .pr_agent.toml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  CNAME  README.md  _config.agentirc.yml  _config.base.yml  _config.culture.yml  _config.yml  index.md  pyproject.toml  sonar-project.properties
_plugins/: site_filter.rb
agentirc/: __main__.py  cli.py  learn_prompt.py  mesh_config.py  observer.py  persistence.py  pidfile.py
culture/: __init__.py  __main__.py  cli.py  config.py  constants.py  credentials.py  learn_prompt.py  mesh_config.py  observer.py  persistence.py  pidfile.py
docs/: SECURITY.md  agent-harness-spec.md  agent-lifecycle.md  agent-readiness.md  channel-polling.md  cli.md  codex-backend.md  copilot-backend.md  culture-cli.md  docs-site.md  getting-started.md  grow-your-agent.md  harness-conformance.md  harness-prd.md  index.md  layer1-core-irc.md  layer4-federation.md  layer5-agent-harness.md  layer5-daemon.md  opencode-backend.md  overview.md  publishing.md  rooms.md  threads.md  use-cases-index.md  what-is-culture.md
protocol/: commands.py  replies.py
server/: __main__.py  channel.py  client.py  config.py  ircd.py  remote_client.py  server_link.py
tests/: conftest.py  test_acp_daemon.py  test_agent_runner.py  test_archive.py  test_bot.py  test_bot_config.py  test_bot_manager.py  test_bots_integration.py  test_channel.py  test_codex_daemon.py  test_connection.py  test_console_client.py  test_console_connection.py  test_console_fixes_224_227.py  test_console_icons.py  test_daemon.py  (+50 more)
(+231 files in other folders)
